Versión back con authValidatorMiddleware y jwtValidatorMiddleware

--- a/config/default.yml
+++ b/config/default.yml
@@ -11,7 +11,7 @@ database:
   user:     'root'
   password: ''
   host:     '127.0.0.1'
-  port:     8080
+  port:     '3306'
   name:     'backapp'
 
 logger:
